--- a/P_Académico/P_Académico.csproj
+++ b/P_Académico/P_Académico.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
     <PackageReference Include="FireSharp" Version="2.0.4" />
   </ItemGroup>
 
